﻿Version 7.0 - 2012-09-28

* Ability to add torn paper effect as part of After Capture Tasks
* Log Viewer powered by log4net replaces the previous logging system
* Dropbox synchronisation of Settings except for Paths
* Workflow system to add/configure Workflow and assign hotkeys
* Merged most popular functionality of ZScreen and rebranded as ShareXmod

Version 6.0.0 - 2012-06-15

* Proportional resizing of shapes while holding shift key
* Added shortcut to "Send To" without using registry
* Cursor can be moved using arrow keys during a shapes capture
* Screen-wide crosshair support during shapes capture
* Magnifier support during shapes capture
* Added imm.io Image Uploader
* Rebranded as ShareX

Version 5.5.0 - 2012-03-07

5.5.0 Added Email as file uploader
5.4.1 Clipboard upload auto detects URL and shortens it
5.4.0 Added optional shadow capture for transparent capture
5.3.1 Settings are backed up for automatic recovery
5.3.0 Added Twitpic, Twitsnaps and yFrog
5.2.1 Improved tray menu
5.2.0 New updater with automatic downloader
5.1.0 Added image resize settings

Version 5.0.0 - 2012-01-10

5.0.0 Added Window & Control capture support to shape captures
4.9.0 Added new post-capture option: save screenshots to file
4.8.0 Added Box file uploader support

Version 4.7.2 - 2011-10-31

4.7.2 Supported image/text/file based FTP destinations
4.7.1 Added camera sound when capture is made
4.7.0 Added Transparent window capture 

Version 4.6.0 - 2011-10-07

4.6.0 Added Hotkeys support
4.5.0 Added support to capture window from a list of windows

Version 4.4.0 - 2011-09-27

4.4.0 Added support to capture shapes to Clipboard
4.3.0 Added Minus uploader support
4.2.0 Added Photobucket uploader support
4.1.1 Added user account support for Goo.gl URL Shortener service
4.1.0 Added tray icon support
4.0.0 Added Capture menu to capture rectangle, rounded rectangle, ellipse, triangle, diamond, polygon and freehand shapes

Version 3.12 - 2011-05-28
